# crud

./: Cargo.toml
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  model.tsx
frontend/src/components/: entityTable.tsx  libraryService.tsx  table.tsx  tableChooser.tsx  tableRow.tsx
frontend/src/components/libraryService/: bookTable.tsx  borrowingWindow.tsx  cardTable.tsx  librarianChooser.tsx  studentTable.tsx  teacherTable.tsx
src/: error.rs  main.rs  model.rs
src/web/: author.rs  book.rs  category.rs  crud_service.rs  curriculum.rs  faculty.rs  librarian.rs  library_service.rs  mod.rs  student.rs  students_borrowing.rs  table.rs  teacher_card.rs  teachers_borrowing.rs
src/web/crud_service/: author_book.rs  country.rs  faculty_curriculum.rs  publisher.rs  student.rs  student_card.rs  students_borrowing.rs  teacher.rs  teachers_borrowing.rs
src/web/library_service/: book.rs  borrowing.rs  card.rs  student.rs  teacher.rs
