[package]
name = "crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.3", features = [
    "macros",
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
tokio = { version = "1.28.1", features = ["full"] }
dotenvy = "0.15.7"
axum = "0.6.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.4.0", features = ["cors"] }
color-eyre = "0.6.2"
chrono = { version = "0.4.24", features = ["serde"] }
